hphp/test/zend/good/ext/dom/tests/DOMDocument_loadHTML_error1.php
<?php
$doc = new DOMDocument();
$doc->loadHTML();
?>
