hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_offsetGet_missing_param.php
<?php
$dll = new SplDoublyLinkedList();
$dll->push(1);
$dll->push(2);

var_dump($dll->offsetGet());
?>